# nd0277-data-engineering-with-microsoft-azure

./: .gitmodules  README.md  main.py  pyproject.toml
course-2-data-modelling/: 2_23-creating-fact-and-dimension-tables.ipynb
course-2-data-modelling/1_13-creating-a-table-with-postgres/: Exercise.ipynb
course-2-data-modelling/2_10-creating-normalized-tables/: Exercise.ipynb
course-2-data-modelling/Lesson_1-Introduction-to-Data-Modelling/: 1_20-create-table-with-cassandra_Exercise.ipynb
course-2-data-modelling/Lesson_2-Relational-Data-Models/: 2_16-creating-denormalized-tables_Exercise.ipynb
course-2-data-modelling/Lesson_3-NoSQL-Data-Models/: 3_10-three-queries-three-tables.ipynb  3_14-primary-keys_Exercise.ipynb  3_18-clustering-columns.ipynb
course-3-cloud-data-warehouses-with-azure/Lesson_2-Introduction-to-Data-Warehouses/: 2_07-exercise-1-step-1-and-2.ipynb  2_09-exercise-1-step-3.ipynb.ipynb  2_11-exercise-1-step-4.ipynb  2_13-exercise-1-step-5.ipynb  2_15-exercise-1-step-6.ipynb  2_26-exercise-2-part-1-slicing-and-dicing.ipynb  2_28-exercise-2-part-2-roll-up-and-drill-down.ipynb  2_30-exercise-2-part-3-grouping-sets.ipynb  2_32-exercise-2-part-4-cube.ipynb
course-4-data-lakes-and-lakehouses-with-spark-and-azure-databricks/Lesson-2-Data-Lakes-and-Spark/: 2_06-exercise-hadoop-mapreduce.ipynb
course-4-data-lakes-and-lakehouses-with-spark-and-azure-databricks/Lesson-3-Data-Wrangling-with-Spark/: 3_05-procedural-programming-exercise.ipynb  3_09-maps-and-lambda-functions-exercise.ipynb  3_18-data-wrangling-with-spark-exercise.ipynb  (+2 more)
postgres/: .env
