[project]
name = "nd0277-data-engineering-with-microsoft-azure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cassandra-driver>=3.29.2",
    "ipykernel>=6.30.1",
    "ipython-sql>=0.5.0",
    "psycopg2-binary>=2.9.10",
    "ruff>=0.12.8",
]
